inventory/cluster/provision/registry/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-deployment
  labels:
    app: registry
spec:
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      volumes:
        - name: registry-pv-storage
          persistentVolumeClaim:
            claimName: registry-pv-claim
      containers:
        - name: registry
          image: registry:2.8.2
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: "/var/lib/registry"
              name: registry-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  selector:
    app: registry
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx-ingress-internal"
    nginx.ingress.kubernetes.io/proxy-body-size: 0
spec:
  ingressClassName: nginx-ingress-internal
  tls:
    - hosts:
        - registry.internal.iosis.tech
      secretName: registry-tls
  rules:
    - host: registry.internal.iosis.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-service
                port:
                  number: 80
